--- a/song3.html
+++ b/song3.html
@@ -2,7 +2,7 @@
 <html lang="en">
     <head>
         <meta charset="UTF-8" />
-        <title>My Favorite Music Videos – Crazy</title>
+        <title>My Favorite Music Videos – Simple Man</title>
 
         <!-- Google Fonts -->
         <link
@@ -25,16 +25,16 @@
         <main>
             <section>
                 <h2>
-                    <span>Track One</span>
-                    “Crazy” – Aerosmith
+                    <span>Track Three</span>
+                    “Simple Man” – Lynyrd Skynyrd
                 </h2>
                 <p>
-                    “Crazy” is one of Aerosmith’s most iconic videos, mixing storytelling, attitude, and energy. The
-                    video’s rebellious vibe and memorable characters make it a classic visually and musically.
+                    “Simple Man” is emotional and meaningful, with a message about life and values. The video’s
+                    reflective tone adds depth to the song’s powerful lyrics and gives it a timeless feel.
                 </p>
                 <iframe
-                    src="https://www.youtube.com/embed/NMNgbISmF4I"
-                    title="Crazy by Aerosmith - music video"
+                    src="https://www.youtube.com/embed/Mqfwbf3X8SA"
+                    title="Simple Man by Lynyrd Skynyrd - music video"
                     allowfullscreen>
                 </iframe>
             </section>
